[gd_scene load_steps=3 format=3 uid="uid://cn8yd5lbf2t7e"]

[ext_resource type="Script" path="res://scenes/main/main_container.gd" id="1_efo72"]
[ext_resource type="Script" path="res://scenes/ui/top_bar.gd" id="2_4eujf"]

[node name="MainContainer" type="Control"]
layout_mode = 1
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("1_efo72")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_right = 1.0
anchors_bottom = 1.0

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
script = ExtResource("2_4eujf")

[node name="Title" type="Label" parent="VBoxContainer/TopBar"]
layout_mode = 2
text = "SwarmVille"

[node name="ThemeToggle" type="Button" parent="VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 10
text = "ðŸŒ“ Theme"

[node name="SplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 1600

[node name="Viewport2D" type="SubViewport" parent="VBoxContainer/SplitContainer"]
layout_mode = 2
size = Vector2(1600, 1020)

[node name="RightSidebar" type="Control" parent="VBoxContainer/SplitContainer"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SplitContainer/RightSidebar"]
layout_mode = 1
anchors_right = 1.0
anchors_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer/SplitContainer/RightSidebar/VBoxContainer"]
layout_mode = 2
text = "Agents"

[node name="AgentList" type="ScrollContainer" parent="VBoxContainer/SplitContainer/RightSidebar/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/SplitContainer/RightSidebar/VBoxContainer/AgentList"]
layout_mode = 2
size_flags_horizontal = 2

[node name="BottomBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="Status" type="Label" parent="VBoxContainer/BottomBar"]
layout_mode = 2
text = "Disconnected"

[node name="Coordinates" type="Label" parent="VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 10
text = "(0, 0)"

[node name="FPS" type="Label" parent="VBoxContainer/BottomBar"]
layout_mode = 2
text = "60 FPS"
